[workspace]
members = [
  # "examples/*",
  "examples/candy-cane",
  "examples/cube-wave",
  "examples/dissolve-sphere-standard-material-extensions",
  "examples/fresnel-effect",
  # "examples/shield-spheres",
  # "examples/shield-with-depth",
  "examples/ui-button-shader",
  "examples/raymarch-sphere",
  "libs/*",
  "examples/two-uvs",
  "examples/edge-detection-custom-phase",
  "concepts/*",
  "examples/dappled-lighting",
  "examples/cube-sphere",
  "examples/visibility-2d-mesh",
  "examples/inverse-kinematics-fabrik-2d",
  "examples/inverse-kinematics-fabrik-3d",
  "examples/inverse-kinematics-fabrik-3d-multiple-end-effectors",
]
# "examples/spacecraft-noiseland",
# rotating-column depends on bevy_tweening
# might be able to use animation clips
# "examples/rotating-column",
exclude = []
license = "MIT OR Apache-2.0"
resolver = "2"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.17.0", features = ["jpeg", "file_watcher"] }
# bevy-inspector-egui = "0.31.0"
# bevy_asset_loader = "0.22.0"
# bevy_asset_loader = "0.23.0-rc.3"
# bevy_tweening = "0.11.0"
# bevy_panorbit_camera = "0.19"
# bevy_basic_camera = { path = "./libs/bevy_basic_camera" }
bevy_shader_utils = { path = "./libs/bevy_shader_utils" }
bevy_prepass_debug = { path = "./libs/bevy_prepass_debug" }
itertools = "0.14"

# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy" }
