[package]
name = "cube-wave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
itertools = "0.10.3"
bevy-inspector-egui = "0.12.1"

[dependencies.bevy_shader_utils]
path = "../../libs/bevy_shader_utils"
