[package]
name = "cube-wave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
bevy-inspector-egui = "0.14.0"

[dependencies.bevy]
workspace = true

[dependencies.bevy_shader_utils]
path = "../../libs/bevy_shader_utils"
