[dependencies]
bitflags = "1.3.2"
bevy_asset_loader = { path = "../../vendor/bevy_asset_loader/bevy_asset_loader" }

[dependencies.bevy]
features = ["jpeg"]
git = "https://github.com/bevyengine/bevy.git"
rev = "de484c1e4147d01bf34c88a10797b75128a0d98a"

[dependencies.bevy_shader_utils]
path = "../../libs/bevy_shader_utils"

[package]
edition = "2021"
name = "dissolve-sphere-standard-material-extension"
version = "0.1.0"
