[dependencies]
bitflags = "1.3.2"

[dependencies.bevy]
features = ["jpeg"]
git = "https://github.com/bevyengine/bevy.git"
rev = "e0a8087408c9177927e00a538c8581ada74e1831"

[dependencies.bevy_asset_loader]
git = "https://github.com/niklasei/bevy_asset_loader.git"
branch = "bevy_main"

[dependencies.bevy_shader_utils]
path = "../../libs/bevy_shader_utils"

[package]
edition = "2021"
name = "dissolve-sphere-standard-material-extension"
version = "0.1.0"
