[package]
name = "rotating-column"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
itertools = "0.10.3"
bevy-inspector-egui = { workspace = true }
bevy_tweening = { workspace = true }
bevy = { workspace = true }

[dependencies.bevy_shader_utils]
path = "../../libs/bevy_shader_utils"
