[package]
name = "shader-test-001"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "3c51ad27641f23a8bcff77b7c2ab7f253b2af22d" }
bevy_shader_utils = { path = "../../libs/bevy_shader_utils" }
