[package]
name = "shield-with-depth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_shader_utils = { workspace = true }
bevy_basic_camera = { workspace = true }
