[package]
name = "start-menu-hades"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["wav"] }
bevy_asset_loader = { workspace = true, features = ["2d", "progress_tracking"] }
bevy_tweening.workspace = true
itertools = "0.12.1"
iyes_progress = "0.11.0"
strum = { version = "0.26.2", features = ["derive"] }

[lints]
workspace = true
