[package]
description = "A utility package that provides blockout utilities."
edition = "2024"
readme = "README.md"
repository = "https://github.com/rust-adventure/bevy-examples"
homepage = "https://github.com/rust-adventure/bevy-examples/tree/main/libs/bevy_blockout"
keywords = ["bevy", "wgpu"]
license = "MIT"
name = "bevy_blockout"
version = "0.3.0"
exclude = ["/screenshots", "/assets", "/examples"]


[dependencies]
bevy = "0.17.0"

[dev-dependencies]
# bevy-inspector-egui = { workspace = true }
