[package]
name = "bevy_layered_materials"
version = "0.1.0"
edition = "2024"


[features]
webgl = ["bevy_light/webgl"]
webgpu = ["bevy_light/webgpu"]
pbr_transmission_textures = []
pbr_multi_layer_material_textures = []
pbr_anisotropy_texture = []
experimental_pbr_pcss = ["bevy_light/experimental_pbr_pcss"]
pbr_specular_textures = []
pbr_clustered_decals = []
pbr_light_textures = []
# bluenoise_texture = ["bevy_image/ktx2", "bevy_image/zstd"]
# shader_format_glsl = ["bevy_shader/shader_format_glsl"]
trace = ["bevy_render/trace"]
# Enables the meshlet renderer for dense high-poly scenes (experimental)
meshlet = [
    # "dep:lz4_flex",
    # "dep:range-alloc",
    # "dep:bevy_tasks",
]
# # Enables processing meshes into meshlet meshes
# meshlet_processor = [
#     "meshlet",
#     "dep:meshopt",
#     "dep:metis",
#     "dep:itertools",
#     "dep:bitvec",
# ]

[dependencies]
bevy_pbr = { version = "0.17.3" }
bevy_app = { version = "0.17.3" }
bevy_asset = { version = "0.17.3" }
bevy_color = { version = "0.17.3" }
bevy_core_pipeline = { version = "0.17.3" }
bevy_derive = { version = "0.17.3" }
bevy_diagnostic = { version = "0.17.3" }
bevy_ecs = { version = "0.17.3" }
bevy_light = { version = "0.17.3" }
bevy_image = { version = "0.17.3" }
bevy_mesh = { version = "0.17.3" }
bevy_shader = { version = "0.17.3" }
bevy_math = { version = "0.17.3" }
bevy_reflect = { version = "0.17.3" }
bevy_render = { version = "0.17.3" }
bevy_camera = { version = "0.17.3" }
bevy_tasks = { version = "0.17.3", optional = true }
bevy_transform = { version = "0.17.3" }
bevy_utils = { version = "0.17.3" }
bevy_platform = { version = "0.17.3", default-features = false, features = [
    "std",
] }
bitflags = { version = "2.3", features = ["bytemuck"] }

[dev-dependencies]
bevy.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
features = ["bevy_image/zstd_rust"]


[lints]
workspace = true
